Update 1 - Copia.html

--- a/index_arquivos/OUTROS/MEUS SITES/1 - Copia.html
+++ b/index_arquivos/OUTROS/MEUS SITES/1 - Copia.html
@@ -265,19 +265,19 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
-" target="_self"><b>
-NOME🔴
+https://jbmsantos0398.github.io/FAVORITOSSANTOS/
+" target="_blank"><b>
+FAVORITOSSANTOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Outra página
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+FAVORITOSSANTOS
 " target="_self"><b>
-NOME🔴
+FAVORITOSSANTOS
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Fraime
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
