Update 1 - Copia.html

--- a/index_arquivos/OUTROS/MEUS SITES/1 - Copia.html
+++ b/index_arquivos/OUTROS/MEUS SITES/1 - Copia.html
@@ -269,20 +269,20 @@ https://jbmsantos0398.github.io/FAVORITOSSANTOS/
 " target="_blank"><b>
 FAVORITOSSANTOS
 </b>(<FONT COLOR="#095202">
-Outra página
+s0398
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-FAVORITOSSANTOS
-" target="_self"><b>
-FAVORITOSSANTOS
+https://jbmsantos0398.github.io/UNICO/
+" target="_blank"><b>
+UNICO
 </b>(<FONT COLOR="#095202">
-Fraime
+s0398
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -290,7 +290,7 @@ NOME⚫
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -304,7 +304,7 @@ NOME⚫
 
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
@@ -312,7 +312,7 @@ NOME⚫
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+" target="_blank"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
 NOME⚫
