Update 1 - Copia.html

--- a/index_arquivos/OUTROS/1 - Copia.html
+++ b/index_arquivos/OUTROS/1 - Copia.html
@@ -353,9 +353,9 @@ OUTROS
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><b>
-NOME🔴
+TESTE MENU LATERAL
+/index.html" target="_self"><b>
+TESTE MENU LATERAL
 </b>(<FONT COLOR="#095202">
 OUTROS
 </FONT>).</a></li>
