--- a/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
+++ b/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
@@ -116,7 +116,7 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 </div>
-<button class="openbtn" onclick="openNav()"><b> &#9776; </b></button>
+<button class="openbtn" onclick="openNav()"><b> &#9776; VEJA TAMBÉM </b></button>
 </body></html>
 </div><div class="main">
 <!---------------------------------------------------------------------------------->
