--- a/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
+++ b/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
@@ -116,7 +116,7 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 </div>
-<button class="openbtn" onclick="openNav()"><b> &#9776; VEJA TAMBÉM </b></button>
+<button class="openbtn" onclick="openNav()">&emsp; &#9776; &emsp; VEJA TAMBÉM &emsp; &emsp;</button>
 </body></html>
 </div><div class="main">
 <!---------------------------------------------------------------------------------->
@@ -260,8 +260,8 @@ body {
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--##############################################################################-->
-<!--######################################
-<button class="openbtn" onclick="openNav()">☰ Toggle Sidepanel</button>
+<!--##############################################################################-->
+<BR/><X class="openbtn" onclick="openNav()"> ☰ MENU LATERAL ☰ </X>
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--##############################################################################-->
