--- a/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
+++ b/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
@@ -116,7 +116,7 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 </div>
-<button class="openbtn" onclick="openNav()">&emsp; &#9776; &emsp; VEJA TAMBÉM &emsp; &emsp;</button>
+<CENTER><button class="openbtn" onclick="openNav()">&emsp; &#9776; &emsp; VEJA TAMBÉM &emsp; &#9776; &emsp; </button></CENTER>
 </body></html>
 </div><div class="main">
 <!---------------------------------------------------------------------------------->
@@ -190,6 +190,22 @@ document.write('  '+todaysDate);
 </SCRIPT></body></html></mark></u></CENTER>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
+<!---------------------FAIXA AZUL-- _blank --- _self -----
+<a href="../../index.html" target="_self">
+<div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a>
+<!---------------------------------------------------------------------------------->
+<!DOCTYPE html><html><head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"><style>
+img {
+  max-width: 100%;
+  height: auto;
+}
+</style></head><body>
+<!-------------------------------------------
+<img src="img_chania.jpg" width="345" height="345">
+<!---------------------------------------------------------------------------------->
+</body></html>
+<!---------------------------------------------------------------------------------->
 <!--##############################################################################-->
 <!--##############################################################################-->
 <!--##############################################################################-->
@@ -214,7 +230,7 @@ body {
   left: 0;
   background-color: #111;
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: 0.0s;
   padding-top: 60px;
 }
 .sidepanel a {
@@ -235,11 +251,11 @@ body {
   font-size: 36px;
 }
 .openbtn {
-  font-size: 20px;
+  font-size: 22px;
   cursor: pointer;
   background-color: #111;
   color: white;
-  padding: 16px 30px;
+  padding: 12px 30px;
   border: none;
 }
 .openbtn:hover {
@@ -247,7 +263,17 @@ body {
 }
 </style></head><body><div id="mySidepanel" class="sidepanel">
 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-
+<!------------------------------------------------------------------>
+<!----------------------------- _self ------ _blank ---------------->
+<!------------------------------------------------------------------>
+<a href="
+LINK🔴
+" target="_blank"><img src="
+IMAGEM🔴
+" width="150" height="150"><FONT SIZE=+2><B>
+NOME🔴
+</B></FONT></a>
+<!------------------------------------------------------------------>
   <a href="#">About</a>
   <a href="#">Services</a>
   <a href="#">Clients</a>
@@ -271,6 +297,17 @@ body {
 <h2>Collapsed Sidepanel</h2>
 <p>Click on the hamburger menu/bar icon to open the sidepanel.</p>
 
+<!------------------------------------------------------------------>
+<!----------------------------- _self ------ _blank ---------------->
+<!------------------------------------------------------------------>
+<p><a href="
+LINK🔴
+" target="_blank"><img src="
+IMAGEM🔴
+" width="150" height="150"><FONT SIZE=+2><B>
+NOME🔴
+</B></FONT></a></p>
+<!------------------------------------------------------------------>
 
 
 
