Update 1 - Copia.html

--- a/index_arquivos/IMAGENS/QR CODE/1 - Copia.html
+++ b/index_arquivos/IMAGENS/QR CODE/1 - Copia.html
@@ -265,9 +265,9 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+QR CODE ADULTOS/1 - Copia.html
 " target="_self"><b>
-NOME🔴
+QR CODE ADULTOS
 </b>(<FONT COLOR="#095202">
 NOME⚫
 </FONT>).</a></li>
