--- a/index_arquivos/IMAGENS/QR CODE/QR CODE ADULTOS/1.html
+++ b/index_arquivos/IMAGENS/QR CODE/QR CODE ADULTOS/1.html
@@ -107,12 +107,12 @@ body {margin:0;}
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<a href="1 - Copia.html"><i class="fa fa-mail-reply" style="font-size:42px;color:red"></i></a>
-<a href="../../AUDIOS/1 - Copia.html">🎧</a>
-<a href="../../DOCUMENTOS/1 - Copia.html">📄</a>
-<a href="../../IMAGENS/1 - Copia.html">📷</a>
-<a href="../../VÍDEOS/1 - Copia.html">🎞️</a>
-<a href="../../OUTROS/1 - Copia.html">📂</a>
+<a href="../1 - Copia.html"><i class="fa fa-mail-reply" style="font-size:42px;color:red"></i></a>
+<a href="../../../AUDIOS/1 - Copia.html">🎧</a>
+<a href="../../../DOCUMENTOS/1 - Copia.html">📄</a>
+<a href="../../../IMAGENS/1 - Copia.html">📷</a>
+<a href="../../../VÍDEOS/1 - Copia.html">🎞️</a>
+<a href="../../../OUTROS/1 - Copia.html">📂</a>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 </div>
