Update 1 - Copia.html

--- a/index_arquivos/OUTROS/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/OUTROS/DOWNLOADS/1 - Copia.html
@@ -265,35 +265,67 @@ img {
 <!------------------------------------------------------------------>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
-" target="_self"><b>
-NOME🔴
+FRAIME E ESSE
+.zip" target="_self"><b>
+FRAIME E ESSE 
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Downloads
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+5 exemplo html
+.zip" target="_self"><b>
+5 Exemplo html
+</b>(<FONT COLOR="#095202">
+Downloads
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+Pastas -COM PESQUISA
+.zip" target="_self"><b>
+Pastas -COM PESQUISA
+</b>(<FONT COLOR="#095202">
+Downloads
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+.zip" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Downloads
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+.zip" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Downloads
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+.zip" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Downloads
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+.zip" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+Downloads
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+.zip" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+Downloads
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
@@ -304,18 +336,34 @@ NOME⚫
 
 <li><a href="
 LINK🔴
-" target="_self"><b>
+.zip" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Downloads
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
 LINK🔴
-" target="_self"><b>
+.zip" target="_self"><b>
 NOME🔴
 </b>(<FONT COLOR="#095202">
-NOME⚫
+Downloads
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+.zip" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+Downloads
+</FONT>).</a></li>
+<!------------------------------------------------------------------>
+<li><a href="
+LINK🔴
+.zip" target="_self"><b>
+NOME🔴
+</b>(<FONT COLOR="#095202">
+Downloads
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 
