Update 1 - Copia.html

--- a/index_arquivos/OUTROS/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/OUTROS/DOWNLOADS/1 - Copia.html
@@ -289,9 +289,9 @@ Downloads
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
-LINK🔴
+Vídeos
 .zip" target="_self"><b>
-NOME🔴
+Vídeos
 </b>(<FONT COLOR="#095202">
 Downloads
 </FONT>).</a></li>
