Update 1 - Copia.html

--- a/index_arquivos/OUTROS/DOWNLOADS/1 - Copia.html
+++ b/index_arquivos/OUTROS/DOWNLOADS/1 - Copia.html
@@ -269,7 +269,7 @@ FRAIME E ESSE
 .zip" target="_self"><b>
 FRAIME E ESSE 
 </b>(<FONT COLOR="#095202">
-Downloads
+Exemplo Html
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -277,7 +277,7 @@ Downloads
 .zip" target="_self"><b>
 5 Exemplo html
 </b>(<FONT COLOR="#095202">
-Downloads
+Exemplo Html
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -285,7 +285,7 @@ Pastas -COM PESQUISA
 .zip" target="_self"><b>
 Pastas -COM PESQUISA
 </b>(<FONT COLOR="#095202">
-Downloads
+Exemplo Html
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
@@ -293,7 +293,7 @@ Vídeos
 .zip" target="_self"><b>
 Vídeos
 </b>(<FONT COLOR="#095202">
-Downloads
+Exemplo Html
 </FONT>).</a></li>
 <!------------------------------------------------------------------>
 <li><a href="
