--- a/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
+++ b/index_arquivos/OUTROS/TESTE MENU LATERAL/index.html
@@ -274,7 +274,7 @@ IMAGEM🔴
 NOME🔴
 </B></FONT></a>
 <!------------------------------------------------------------------>
-  <a href="#">About</a>
+  <a href="https://fsgithu.github.io/LISTA-LEMBRETES/">LISTA-LEMBRETES</a>
   <a href="#">Services</a>
   <a href="#">Clients</a>
   <a href="#">Contact</a>
